--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "bootstrap": "^4.0.0",
     "bootstrap-vue": "^2.0.0-rc.9",
     "vue": "^2.5.13",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-toasted": "^1.1.24"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.6",
